--- a/projeto.tex
+++ b/projeto.tex
@@ -279,7 +279,8 @@ ASSINATURAS PARA REDES DE COMPUTADORES}
    \vspace*{\fill}
    \centering
    \noindent
-   \textit{Espaço destinado à dedicátoria do texto.} \vspace*{\fill}
+   \textit{Dedico esse texto a todos que valorizam a liberdade e o conhecimento.}
+   \vspace*{\fill}
 \end{dedicatoria}
 % ---
 
@@ -317,7 +318,7 @@ Agradeço a todos que sorriem ao se lembrar de mim e a todos que me fazem sorrir
 \setlength{\absparsep}{18pt} % ajusta o espaçamento dos parágrafos do resumo
 \begin{resumo}
 
-Desde as origens da Internet, existe uma grande preocupação com a privacidade das comunicações e com a prevenção de danos causados por ataques que se aproveitam de vulnerabilidades nas redes corporativas e públicas. Com o aumento constante do uso de dispositivos conectados à internet e da intensidade e variedade de dados transmitidos entre as pessoas, o número de falhas de segurança em redes ainda é preocupante e tende a continuar subindo. Contudo, os pacotes de alguns programas utilizados nesses ataques, conhecidos como \textit{Malware}, possuem aspectos que são rastreáveis e que, quando incorporados aos métodos de busca dos sistemas de segurança, podem ajudar a detectar esses programas maliciosos antes que eles causem dano a outros pontos da rede infectados. A esses aspectos damos o nome de assinaturas de \textit{Malware} e o objeto de estudo deste trabalho são as técnicas de captura de \textit{Malware} que envolvem assinaturas, novas ferramentas do segmento e as tendências e que estão se apresentando no cenário tecnologico para esse tipo de abordagem. O trabalho propõe também a implementação de um ambiente de aplicação e testagem de assinaturas de \textit{Malware} sobre um conjunto de programas contendo traços de código malicioso, com o auxílio de ferramentas modernas que também são utilizadas por grandes empresas de segurança digital e desenvolvimento.
+Desde as origens da Internet, existe uma grande preocupação com a privacidade das comunicações e com a prevenção de danos causados por ataques que se aproveitam de vulnerabilidades nas redes corporativas e públicas. Com o aumento constante do uso de dispositivos conectados à internet e da intensidade e variedade de dados transmitidos entre as pessoas, o número de falhas de segurança em redes ainda é preocupante e tende a continuar subindo. Contudo, os pacotes de alguns programas utilizados nesses ataques, conhecidos como \textit{Malware}, possuem aspectos que são rastreáveis e que, quando incorporados aos métodos de busca dos sistemas de segurança, podem ajudar a detectar esses programas maliciosos antes que eles causem dano a outros pontos da rede infectados. A esses aspectos damos o nome de assinaturas de \textit{Malware} e o objeto de estudo deste trabalho são as técnicas de captura de \textit{Malware} que envolvem assinaturas, novas ferramentas do segmento e as tendências e que estão se apresentando no cenário tecnologico para esse tipo de abordagem. O trabalho propõe também a implementação de um ambiente de aplicação e testagem de assinaturas de \textit{Malware} sobre um conjunto de programas contendo traços de código malicioso, com o auxílio de ferramentas modernas que também são utilizadas por grandes empresas de segurança digital e desenvolvimento, além de um protótipo de textit{webservice} para testagem de assinaturas de \textit{malware} e verificação de arquivos \textit{online}.
 
 \textbf{Palavras-chave:} Segurança de redes, \textit{malware}, vírus de computador.
 \end{resumo}
@@ -326,7 +327,7 @@ Desde as origens da Internet, existe uma grande preocupação com a privacidade 
 \begin{resumo}[Abstract]
 \begin{otherlanguage*}{english}
 
-Since the Internet's origins, there's a great preoccupation with the privacy of communications and with preventing damage caused by attacks that exploit vulnerabilities in corporative and private networks. With the increase in usage of internet connected devices and of the intensity and variety of transmitted data between people, the number of security flaws in networks is still worrisome and tends to keep growing. However, packages of some programs used in those attacks, known as \textit{Malware}, have traceable aspects that when incorporated to the search methods of security systems, might help detecting them before causing damage to other infected points ofthe network. To those aspects, we give the name of \textit{Malware} signatures, and the study object of this work are the \textit{Malware} capturing techniques involving signatures, new tools in the segment and the trends showing up in the technologic scenario to this kind of approach. The work also proposes the implementation of an environment to apply and test \textit{Malware} signatures on a set of programs containing traces of malicious code, with the help of modern tools that are also being used by big companies of digital security and development.
+Since the Internet's origins, there's a great preoccupation with the privacy of communications and with preventing damage caused by attacks that exploit vulnerabilities in corporative and private networks. With the increase in usage of internet connected devices and of the intensity and variety of transmitted data between people, the number of security flaws in networks is still worrisome and tends to keep growing. However, packages of some programs used in those attacks, known as \textit{Malware}, have traceable aspects that when incorporated to the search methods of security systems, might help detecting them before causing damage to other infected points ofthe network. To those aspects, we give the name of \textit{Malware} signatures, and the study object of this work are the \textit{Malware} capturing techniques involving signatures, new tools in the segment and the trends showing up in the technologic scenario to this kind of approach. The work also proposes the implementation of an environment to apply and test \textit{Malware} signatures on a set of programs containing traces of malicious code, with the help of modern tools that are also being used by big companies of digital security and development, and also a \textit{Webservice} prototype for \textit{online} \textit{malware} signature testing and file verification.
 
 \textbf{Keywords:} Network security, \textit{malware}, computer viruses.
 
