Fazendo bruxarias para corrigir nomenclatura errada de tabelas p/ quadros

--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -1,10 +1,14 @@
 \chapter{DESENVOLVIMENTO}
 \label{c.Desenvolvimento}
 
-- Montagem do ambiente de testes com o Yara [ x ]
+O desenvolvimento do projeto dividiu-se em quatro fases: a montagem do ambiente de testes de assinaturas construídas a partir de regras do Yara; a obtenção das regras e construção de um índice de agrupamento das mesmas para agilizar a execução das varreduras; obtenção e escolha de amostras de \textit{malware} para testagem; bateria de testes final e análise de resultados. Complementarmente, foi desenvolvida a ideia de uma aplicação \textit{web} para análise de \textit{malware} com base em regras de detecção do Yara.
 
-- Obtenção de regras de detecção [ x ]
+\section{Obtenção das regras de detecção}
+\label{s.obtregras}
 
-- Testes iniciais [ x ]
 
-- Testagem completa e análise de resultados [ ]
+% - Testes iniciais [ x ]
+
+% - Testagem completa e análise de resultados [ ]
+
+% - Ideia da aplicação web e desenvolvimento parcial do sistema []
