--- a/fundamentacao.tex
+++ b/fundamentacao.tex
@@ -238,14 +238,15 @@ determinada condição. Para isso, o programa fica apenas checando a data do
 sistema até que seja a data especificada e só então ele vai, de fato, executar
 seu código.(SAHEED, 2013)
 
-Dadas essas classificações, pode-se ilustrar os tipos de \textit{malware} e suas características com a seguinte tabela:
-\begin{table}[h]
+Dadas essas classificações, pode-se ilustrar os tipos de \textit{malware} e suas características com o seguinte quadro:
+
+\begin{quadro}[h]
 \caption{\small Famílias de \textit{Malware} e fatores comparativos}
 \centering
 \includegraphics{figs/tabela.pdf}
 \label{f.tabelamalware}
 \legend{\small Fonte: Saeed (2013) (traduzida pelo autor).}
-\end{table}
+\end{quadro}
 \subsection{Exemplos de Código de Malware} % (fold)
 \label{ssub:exemplos_malware}
 
@@ -313,21 +314,21 @@ aplicação, a grande maioria também procura traçar perfis de comportamento
 utilizando técnicas de detecção em modo dinâmico como pode-se ver nos quadros
 abaixo:
 
-\begin{table}[h]
+\begin{quadro}[h]
 \caption{\small Tecnologias recentes de detecção em nível de rede}
 \centering
 \includegraphics[scale=0.7]{figs/tabela_deteccao_nivel_rede.JPG}
 \label{f.tabeladeteccao_rede}
 \legend{\small Fonte: Baddar. (\citeyear{baddarxx})}
-\end{table}
+\end{quadro}
 
-\begin{table}[h]
+\begin{quadro}[h]
 \caption{\small Tecnologias recentes de detecção em nível de aplicação}
 \centering
 \includegraphics[scale=0.7]{figs/tabela_deteccao_nivel_aplicacao.JPG}
 \label{f.tabeladeteccao_app}
 \legend{\small Fonte: Baddar. (\citeyear{baddarxx})}
-\end{table}
+\end{quadro}
 
 
 
