--- a/references.bib
+++ b/references.bib
@@ -129,6 +129,17 @@
     year = {2014},
     url = {http://virustotal.github.io/yara/}
 }
-ALVAREZ, Victor. Yara in a Nutshell. (2014) Disponível em http://virustotal.github.io/yara/
-MORENO, M. Yara Rules (2015). Disponível em: https://github.com/Yara-Rules/rules
-SEBASTIAN. ClamAV to Yara. (2014) Disponível em: https://github.com/sec51
+
+@online{moreno,
+  author = {moreno, m.},
+  title = {Yara Rules},
+  url = {https://github.com/Yara-Rules/rules},
+  year = {2015}
+}
+
+@online{sebastian,
+  author = {Sebastian, F.},
+  title = {ClamAV to Yara},
+  url = {https://github.com/sec51},
+  year = {2014}
+}
