--- a/projeto.tex
+++ b/projeto.tex
@@ -52,6 +52,7 @@
 \usepackage{xr}
 \usepackage{nameref}
 \usepackage{trivfloat}
+\usepackage{listingsutf8}
 % ---
 
 % ---
@@ -72,6 +73,7 @@
 \floatstyle{plaintop} % Forçar posição da legenda para o topo
 \restylefloat{quadro} % Forçar posição da legenda para o topo
 \renewcommand{\listquadroname}{Lista de Quadros} % Forçar texto na Lista de Quadros
+\renewcommand{\lstlistingname}{Algoritmo}
 % ---
 % Configurações do pacote backref
 \renewcommand{\familydefault}{\sfdefault}
