Colocando mais figuras e adicionando seções.

--- a/desenvolvimento.tex
+++ b/desenvolvimento.tex
@@ -7,6 +7,21 @@ O desenvolvimento do projeto dividiu-se em quatro fases: a montagem do ambiente 
 \label{s.obtregras}
 
 
+\section{Testes iniciais com o ambiente de desenvolvimento}
+\label{s.testesiniciais}
+
+\section{Testagem completa e análise de resultados}
+\label{s.testefull}
+
+\section{Ideia de uma aplicação web do projeto desenvolvido}
+\label{s.prototipo}
+
+\begin{figure}
+  \includegraphics{/figs/flux_prototipo}
+  \caption{Fluxograma de funcionamento da aplicação. Fonte: elaborada pelo autor.}
+  \label{f.flux_prototipo}
+\end{figure}
+
 % - Testes iniciais [ x ]
 
 % - Testagem completa e análise de resultados [ ]
