--- a/metodologia.tex
+++ b/metodologia.tex
@@ -90,7 +90,7 @@ obtido do repositório do projeto \href{yararules.org}{Yara Rules} no
 	\centering
 	\includegraphics[width=0.95\textwidth]{figs/zeus}
 	\caption{Regra de detecção para o \textit{malware} ``Zeus''. Imagem elaborada pelo autor}
-	\label{fig:label}
+	\label{f.regrazeus}
 \end{figure}
 
 Na imagem acima temos exemplo de uma descrição para o \textit{malware} chamado ``Zeus''
@@ -107,7 +107,7 @@ Outro exemplo de regra de detecção envolvendo parâmetros semelhantes aos ante
 	\centering
 	\includegraphics[width=0.95\textwidth]{figs/superfish}
 	\caption{Regra de detecção do ``Superfish''}
-	\label{fig:superfish}
+	\label{f.superfish}
 \end{figure}
 
 As regras que utilizaremos no decorrer do projeto serão unificadas num arquivo de índice, compiladas via um\textit{script} em Python para a interpretação do Yara e combinadas com o conjunto completo de arquivos de uma só vez.
