--- a/projeto.tex
+++ b/projeto.tex
@@ -4,11 +4,11 @@
 % É SÓ TROCAR O RECHEIO DAS COISAS, A ESTRUTURA DO TRABALHO É SUAVE DE ENTENDER E É BEM À PROVA DE NOOBS
 % SE VOCÊ É NOOB: SINTO MUITO, SE FODEU. VOLTE AO M$ OFFICE QUE É O TEU LUGAR!
 %
-% RECOMENDO USAR SUBLIME TEXT COM O PLUGIN LATEX TOOLS E OS SNIPPETS QUE ESTÃO EM UM REPO DO GIT QUE
+% RECOMENDO USAR ATOM OU SUBLIME TEXT COM O PLUGIN LATEX TOOLS E OS SNIPPETS QUE ESTÃO EM UM REPO DO GIT QUE
 % EU AINDA VOU LINKAR AQUI
 % VOCE TEM QUE TER O PACOTE MIKTEX BAIXADO E JA TER CONFIGURADO ELE PRA USAR ABNTEX2 E A PORRA TODA
 % SENÃO NÃO VAI COMPILAR E VOCÊ VAI TER QUE VOLTAR PRO OFFICE E CONTAR PROS SEUS AMIGOS QUE VOCÊ
-% FALHOU E É UMA DESONRA PARA OS PROGRAMADORES DO MUNDO INTEIRO.
+% FALHOU E É UMA DESONRA PARA OS PROGRAMADORES DO MUNDO INTEIRO. DESONRA PRA VOCÊ, DESONRA PRO SEU CÓDIGO!
 %
 % É ISSO AÍ, PARE DE PROCRASTINAR E FAÇA SEU TRABALHO. SEI QUE TÁ ATRASADO, RELAXA
 % BOA SORTE!
